# pdf-compressor

./: .gitignore  .vercelignore  README.md  app.py  index.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: blob-upload.js  index.py
assets/: blob-upload-client.js  blob-upload-handler.js
pdf_compressor/: __init__.py  __main__.py  cli.py  core.py  server.py
public/: blob-upload-client.js
tests/: test_core.py  test_server.py
