[project]
name = "pdf-compressor"
version = "0.1.0"
description = "Python PDF compression app with a browser UI, CLI, and Vercel entrypoint"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdf2image>=1.17.0",
    "pikepdf>=10.0.0",
    "pillow>=12.0",
]

[project.scripts]
pdf-compressor = "pdf_compressor.cli:main"
